Fixed off centre news article when it is a link

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,7 +199,8 @@ a:hover {
 .carousel-inner {
   background-color: #fff;
 }
-.carousel-inner > .item > img {
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
   margin: 0 auto;
 }
 
